--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-email-sendgrid": "^4.6.2",
     "@strapi/strapi": "4.6.2",
     "better-sqlite3": "8.0.1",
+    "cloudinary": "^1.34.0",
     "pg": "^8.9.0",
     "pg-connection-string": "^2.5.0"
   },
