--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "better-sqlite3": "8.0.1",
     "cloudinary": "^1.34.0",
     "pg": "^8.9.0",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "strapi-provider-upload-cloudinary": "^3.6.11"
   },
   "author": {
     "name": "A Strapi developer"
