--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "@strapi/plugin-i18n": "4.6.2",
     "@strapi/plugin-users-permissions": "4.6.2",
     "@strapi/provider-email-sendgrid": "^4.6.2",
+    "@strapi/provider-upload-cloudinary": "^4.6.2",
     "@strapi/strapi": "4.6.2",
     "better-sqlite3": "8.0.1",
-    "cloudinary": "^1.34.0",
     "pg": "^8.9.0",
-    "pg-connection-string": "^2.5.0",
-    "strapi-provider-upload-cloudinary": "^3.6.11"
+    "pg-connection-string": "^2.5.0"
   },
   "author": {
     "name": "A Strapi developer"
